align company sponsors horizontally

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -94,26 +94,35 @@
 
         </div>
     </div>
-    <div class="w-100 tc pt3 cb">
+    <div class="w-100 tc pt3 cb center">
 
         <h4 class="black f3 fw6 tc code mt2 mb1 mb0-ns cf">Company sponsors</h4>
 
-        <div class="w-50-ns center pa3">
+        <div class="dib-ns w-10-ns pa3 .v-top">
+
             <a id="space-ape" class="no-underline pointer db center" href="http://www.spaceapegames.com/" target="_blank" title="Space Ape">
-                <img class="w-30" src="/imgs/space-ape.png" alt="Space Ape" title="Space Ape" />
+                <img class="w-100-ns w-30" src="/imgs/space-ape.png" alt="Space Ape" title="Space Ape" />
             </a>
         </div>
- <div class="w-50-ns center pa3">
+
+        <div class="dib-ns w-10-ns pa3 .v-top">
+
             <a id="appmotion" class="no-underline pointer db center" href="http://www.appmotion.de/" target="_blank" title="Appmotion">
-                <img class="w-30" src="/imgs/appmotion_logo_dreizeilig.png" alt="Appmotion" title="Appmotion" />
+                <img class="w-100-ns w-30" src="/imgs/appmotion_logo_dreizeilig.png" alt="Appmotion" title="Appmotion" />
             </a>
         </div>
- <div class="w-50-ns center pa3">
+
+        <div class="dib-ns w-10-ns pa3 v-top">
             <a id="25hours" class="no-underline pointer db center" href="https://www.25hours-hotels.com/hotels/hamburg/number-one" target="_blank" title="25hours">
-                <img class="w-30" src="/imgs/25h.png" alt="25hours Hotel" title="25hours Hotel" />
+                <img class="w-100-ns w-30" src="/imgs/25h.png" alt="25hours Hotel" title="25hours Hotel" />
             </a>
         </div>
-        <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
+
+
+ <div class="w-50-ns center pa3">
+        </div>
+
+        <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center cb">
             <div class="w-100 mw8-l mw6-m ph2 ph0-ns center">
                 <div class="fl mw5-ns ml6">
                     <p class="fw6 tl mv0 white">February 16th</p>
