apublish lars trieloff speaker bio

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -264,12 +264,14 @@
                         Adobe
                     </p>
                     <p class="f6" >
-                        <br><br><br><br>
+                        Lars Trieloff is a principal at Adobe, combining expertise from the fields of software engineering, product management, and marketing and applying it to the evolution and improvement of Adobe's developer ecosystem and the Adobe Cloud Platform. He has been involved with Serverless computing since 2016, and with cloud computing a decade longer.
                     </p>
                     <p class="f6">
+                        Pronouns: he/him
                     </p>
                     <div class="tl">
                         <a class="ph1 no-underline" title="Lars on Twitter" href="https://twitter.com/trieloff" target="_blank">@@include('./icon-twitter.html')</a>
+                        <a class="ph1 no-underline" title="Lars on Medium" href="https://medium.com/@AdobeIO" target="_blank">@@include('./icon-medium.html')</a>
 
                     </div>
 
