--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -12,96 +12,71 @@
           </p>
       </div>
 
-      <div class="fl-ns w-30-ns w-100 pa2">
-          <p class="b">Slot 1</p>
-          <div class="white">
-              <div class="v-mid tl ph3 pv3 bl bb fw6 hamburg-red-bg w-100">
-                  Description
-              </div>
-          </div>
-
-          <div class="bg-near-white">
-              <div class="v-mid tl ph3 pv3 bl bb b--black-50">
+      <table class="collapse ba br2 b--black-10 pv2 ph3">
+          <tr class="striped--light-gray ">
+              <th class="pv2 ph3 tl f6 fw6 ttu w-10">Time</th>
+              <th class="pv2 ph3 tl f6 fw6 ttu w-30">Slot 1</th>
+              <th class="pv2 ph3 tl f6 fw6 ttu w-30">Slot 2</th>
+              <th class="pv2 ph3 tl f6 fw6 ttu w-30">Slot 3</th>
+          </tr>
+          <tr class="striped--light-gray v-top">
+              <td class="pv2 ph3">09:00-13:00</td>
+              <td class="pv2 ph3">
                   <p class="f5 fw6 v-mid">Serverless Framework</p>
                   <p class="f6 fw4">TBA</p>
-              </div>
-          </div>
-
-          <div class="bg-near-white">
-              <div class="v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">Designing, building, and operating FaaS-based microservices on Azure</p>
-                  <p class="f6 fw4">In this workshop we'll explore how to build and run a FaaS-based microservices architecture on Azure. Topics include:</p>
-                  <ul class="f6 fw4">
-                    <li>Using Domain Driven Design (DDD) to design a microservices architecture.</li>
-                    <li>Choosing the right Azure technologies for serverless functions compute, storage, messaging, and other elements of the design.</li>
-                    <li>Understanding microservices design patterns.</li>
-                    <li>Designing for resiliency, scalability, and performance.</li>
-                    <li>Building a CI/CD pipeline.</li>
-                  </ul>
-              </div>
-          </div>
-
-      </div>
-
-
-      <div class="fl-ns w-30-ns w-100 pa2">
-          <p class="b">Slot 2</p>
-          <div class="white">
-              <div class="v-mid tl ph3 pv3 bl bb fw6 hamburg-red-bg w-100">
-                  Description
-              </div>
-          </div>
-
-          <div class="bg-near-white">
-              <div class="v-mid tl ph3 pv3 bl bb b--black-50">
+              </td>
+              <td class="pv2 ph3">
                   <p class="f5 fw6 v-mid">Serverless Web Application on AWS (beginner)</p>
                   <p class="f6 fw4">This workshop shows you how to build a dynamic, serverless web application. You'll learn how to host static web resources with Amazon S3, how to use Amazon Cognito to manage users and authentication, and how to build a RESTful API for backend processing using Amazon API Gateway, AWS Lambda and Amazon DynamoDB.</p>
-              </div>
-          </div>
-
-          <div class="bg-near-white">
-              <div class="v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">Serverless Data Processing on AWS (advanced)</p>
-                  <p class="f6 fw4">This workshop demonstrates how to collect, store, and process data with a serverless application. In this workshop you'll learn how to automatically process files on Amazon S3 using AWS Lambda, how to build real-time streaming applications using Amazon Kinesis Streams and Amazon Kinesis Analytics, how to archive data streams using Amazon Kinesis Firehose and Amazon S3, and how to run ad-hoc queries on those files using Amazon Athena.</p>
-              </div>
-          </div>
-
-      </div>
-
-      <div class="fl-ns w-30-ns w-100 pa2">
-          <p class="b">Slot 3</p>
-          <div class="white w-100">
-              <div class="v-mid tl ph3 pv3 bl bb fw6 hamburg-red-bg w-100">
-                  Description
-              </div>
-          </div>
-
-          <div class="bg-near-white">
-              <div class="v-mid tl ph3 pv3 bl bb b--black-50">
+              </td>
+              <td class="pv2 ph3">
                   <p class="f5 fw6 v-mid">Serverless Chatbot Development (all)</p>
                   <p class="f6 fw4">How many buzzwords can you fit into a single workshop while still keeping it useful? Let’s see! This workshop will teach you how to build serverless chatbot for multiple platforms with NLP integration. It will also show you how to test your chatbot.</p>
                   <p class="f6 fw4">Topics:</p>
                   <ul class="f6 fw4">
-                    <li>Why serverless and chatbots are good fit</li>
-                    <li>How to create a chatbot for fb messenger and telegram</li>
-                    <li>How to store state in serverless chatbot</li>
-                    <li>How to integrate you chatbot with the third-party service</li>
-                    <li>How to send scheduled messages</li>
-                    <li>How to integrate NLP to your chatbot</li>
-                    <li>How to test your chatbot</li>
-                    <li>Basics of good chatbot design</li>
+                      <li>Why serverless and chatbots are good fit</li>
+                      <li>How to create a chatbot for fb messenger and telegram</li>
+                      <li>How to store state in serverless chatbot</li>
+                      <li>How to integrate you chatbot with the third-party service</li>
+                      <li>How to send scheduled messages</li>
+                      <li>How to integrate NLP to your chatbot</li>
+                      <li>How to test your chatbot</li>
+                      <li>Basics of good chatbot design</li>
                   </ul>
-              </div>
-          </div>
 
-          <div class="bg-near-white">
-              <div class="v-mid tl ph3 pv3 bl bb b--black-50">
+              </td>
+          </tr>
+          <tr class="striped--light-gray v-top">
+              <td class="pv2 ph3">13:00-14:00</td>
+              <td class="pv2 ph3 tc b" colspan="3">
+                  Lunch Break
+              </td>
+          </tr>
+
+          <tr class="striped--light-gray v-top">
+              <td class="pv2 ph3">14:00-18:00</td>
+              <td class="pv2 ph3">
+                  <p class="f5 fw6 v-mid">Designing, building, and operating FaaS-based microservices on Azure</p>
+                  <p class="f6 fw4">In this workshop we'll explore how to build and run a FaaS-based microservices architecture on Azure. Topics include:</p>
+                  <ul class="f6 fw4">
+                      <li>Using Domain Driven Design (DDD) to design a microservices architecture.</li>
+                      <li>Choosing the right Azure technologies for serverless functions compute, storage, messaging, and other elements of the design.</li>
+                      <li>Understanding microservices design patterns.</li>
+                      <li>Designing for resiliency, scalability, and performance.</li>
+                      <li>Building a CI/CD pipeline.</li>
+                  </ul>
+              </td>
+              <td class="pv2 ph3">
+                  <p class="f5 fw6 v-mid">Serverless Data Processing on AWS (advanced)</p>
+                  <p class="f6 fw4">This workshop demonstrates how to collect, store, and process data with a serverless application. In this workshop you'll learn how to automatically process files on Amazon S3 using AWS Lambda, how to build real-time streaming applications using Amazon Kinesis Streams and Amazon Kinesis Analytics, how to archive data streams using Amazon Kinesis Firehose and Amazon S3, and how to run ad-hoc queries on those files using Amazon Athena.</p>
+
+              </td>
+              <td class="pv2 ph3">
                   <p class="f5 fw6 v-mid">Developing Event-driven and Serverless Applications with IBM Cloud Functions & Apache OpenWhisk</p>
                   <p class="f6 fw4">Learn the basics and strengths of IBM Cloud Functions & Apache OpenWhisk. In this workshop you will learn how to develop serverless applications composed of loosely coupled microservice-alike functions. You’ll learn about the key concepts and work with our CLI and UI to become a FaaS star by implementing a real-world application. You will also learn how to make use of related technologies such as our API Gateway, Message Hub and App Connect integration as well as other event providers. Finally, you will learn how to package and deploy your entire serverless application together using the the open Serverless Framework as well as IBM’s wskdeply.</p>
-              </div>
-          </div>
+              </td>
+          </tr>
 
-      </div>
-
+      </table>
   </div>
 </div>
