mention beverage and lunch options on workshop day

--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -4,7 +4,7 @@
 
       <div class="tc pb3">
           <p>
-              JeffConf Hamburg features a workshop day one day before the main conference.
+              JeffConf Hamburg features a workshop day one day before the main conference. Beverages and and lunch are included in the ticket.
           </p>
 
           <p>
@@ -49,7 +49,8 @@
           <tr class="striped--light-gray v-top">
               <td class="pv2 ph3">13:00-14:00</td>
               <td class="pv2 ph3 tc b" colspan="3">
-                  Lunch Break
+                  <p class="f5 fw6 v-mid">Lunch Break</p>
+                  <p class="f6 fw4">Finger food (vegan/vegetarian friendly) will be served.</p>
               </td>
           </tr>
 
