--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -79,5 +79,11 @@
           </tr>
 
       </table>
+
+      <h2 class="black f3 fw6 tc code mt5">Workshop Day Location</h2>
+
+      <div class="tc pb3">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1958.2525479698747!2d9.957978754404332!3d53.562544736218015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b18f691b79e6bb%3A0xcd378c10a85d5041!2sbetahaus+-+coworking+hamburg!5e0!3m2!1sen!2sde!4v1516448389357" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
   </div>
 </div>
