--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -1,5 +1,5 @@
 <div id="workshops" class="dn">
-  <div class="tc tl-ns center">
+  <div class="tl-ns center">
       <h3 class="black f2 fw6 tc code">Workshop Day (Feb 15th)</h3>
 
       <div class="tc pb3">
@@ -12,27 +12,27 @@
           </p>
       </div>
 
-      <table class="collapse ba br2 b--black-10 pv2 ph3">
+      <table class="collapse ba br2 b--black-10 pv2-ns w-100 dt--fixed overflow-x-auto">
           <tr class="striped--light-gray ">
-              <th class="pv2 ph3 tl f6 fw6 ttu w-10">Time</th>
-              <th class="pv2 ph3 tl f6 fw6 ttu w-30">Slot 1</th>
-              <th class="pv2 ph3 tl f6 fw6 ttu w-30">Slot 2</th>
-              <th class="pv2 ph3 tl f6 fw6 ttu w-30">Slot 3</th>
+              <th class="pv2-ns ph3 ph1-ns f7 fw6 ttu w-10">Time</th>
+              <th class="pv2-ns ph3 ph1-ns f7 fw6 ttu w-30">Slot 1</th>
+              <th class="pv2-ns ph3 ph1-ns f7 fw6 ttu w-30">Slot 2</th>
+              <th class="pv2-ns ph3 ph1-ns f7 fw6 ttu w-30">Slot 3</th>
           </tr>
           <tr class="striped--light-gray v-top">
-              <td class="pv2 ph3">09:00-13:00</td>
-              <td class="pv2 ph3">
-                  <p class="f5 fw6 v-mid">Serverless Framework</p>
-                  <p class="f6 fw4">TBA</p>
+              <td class="f7 pv2-ns ph3 ph1-ns b"><p>09:00 - 13:00</p></td>
+              <td class="pv2-ns ph3 ph1-ns">
+                  <p class="f7 fw6">Serverless Framework</p>
+                  <p class="f7 fw4">TBA</p>
               </td>
-              <td class="pv2 ph3">
-                  <p class="f5 fw6 v-mid">Serverless Web Application on AWS (beginner)</p>
-                  <p class="f6 fw4">This workshop shows you how to build a dynamic, serverless web application. You'll learn how to host static web resources with Amazon S3, how to use Amazon Cognito to manage users and authentication, and how to build a RESTful API for backend processing using Amazon API Gateway, AWS Lambda and Amazon DynamoDB.</p>
+              <td class="pv2-ns ph3 ph1-ns">
+                  <p class="f7 fw6">Serverless Web Application on AWS (beginner)</p>
+                  <p class="f7 fw4">This workshop shows you how to build a dynamic, serverless web application. You'll learn how to host static web resources with Amazon S3, how to use Amazon Cognito to manage users and authentication, and how to build a RESTful API for backend processing using Amazon API Gateway, AWS Lambda and Amazon DynamoDB.</p>
               </td>
-              <td class="pv2 ph3">
-                  <p class="f5 fw6 v-mid">Designing, building, and operating FaaS-based microservices on Azure</p>
-                  <p class="f6 fw4">In this workshop we'll explore how to build and run a FaaS-based microservices architecture on Azure. Topics include:</p>
-                  <ul class="f6 fw4">
+              <td class="pv2-ns ph3 ph1-ns">
+                  <p class="f7 fw6">Designing, building, and operating FaaS-based microservices on Azure</p>
+                  <p class="f7 fw4">In this workshop we'll explore how to build and run a FaaS-based microservices architecture on Azure. Topics include:</p>
+                  <ul class="f7 fw4">
                       <li>Using Domain Driven Design (DDD) to design a microservices architecture.</li>
                       <li>Choosing the right Azure technologies for serverless functions compute, storage, messaging, and other elements of the design.</li>
                       <li>Understanding microservices design patterns.</li>
@@ -42,20 +42,20 @@
               </td>
           </tr>
           <tr class="striped--light-gray v-top">
-              <td class="pv2 ph3">13:00-14:00</td>
-              <td class="pv2 ph3 tc b" colspan="3">
-                  <p class="f5 fw6 v-mid">Lunch Break</p>
-                  <p class="f6 fw4">Finger food (vegan/vegetarian friendly) will be served.</p>
+              <td class="f7 pv2-ns ph3 ph1-ns b"><p>13:00 - 14:00</p></td>
+              <td class="pv2-ns ph3 ph1-ns tc b" colspan="3">
+                  <p class="f7 fw6">Lunch Break</p>
+                  <p class="f7 fw4">Finger food (vegan/vegetarian friendly) will be served.</p>
               </td>
           </tr>
 
           <tr class="striped--light-gray v-top">
-              <td class="pv2 ph3">14:00-18:00</td>
-              <td class="pv2 ph3">
-                  <p class="f5 fw6 v-mid">Serverless Chatbot Development (all)</p>
-                  <p class="f6 fw4">How many buzzwords can you fit into a single workshop while still keeping it useful? Let’s see! This workshop will teach you how to build serverless chatbot for multiple platforms with NLP integration. It will also show you how to test your chatbot.</p>
-                  <p class="f6 fw4">Topics:</p>
-                  <ul class="f6 fw4">
+              <td class="f7 pv2-ns ph3 ph1-ns b"><p>14:00 - 18:00</p></td>
+              <td class="pv2-ns ph3 ph1-ns">
+                  <p class="f7 fw6">Serverless Chatbot Development (all)</p>
+                  <p class="f7 fw4">How many buzzwords can you fit into a single workshop while still keeping it useful? Let’s see! This workshop will teach you how to build serverless chatbot for multiple platforms with NLP integration. It will also show you how to test your chatbot.</p>
+                  <p class="f7 fw4">Topics:</p>
+                  <ul class="f7 fw4">
                       <li>Why serverless and chatbots are good fit</li>
                       <li>How to create a chatbot for fb messenger and telegram</li>
                       <li>How to store state in serverless chatbot</li>
@@ -66,14 +66,14 @@
                       <li>Basics of good chatbot design</li>
                   </ul>
               </td>
-              <td class="pv2 ph3">
-                  <p class="f5 fw6 v-mid">Serverless Data Processing on AWS (advanced)</p>
-                  <p class="f6 fw4">This workshop demonstrates how to collect, store, and process data with a serverless application. In this workshop you'll learn how to automatically process files on Amazon S3 using AWS Lambda, how to build real-time streaming applications using Amazon Kinesis Streams and Amazon Kinesis Analytics, how to archive data streams using Amazon Kinesis Firehose and Amazon S3, and how to run ad-hoc queries on those files using Amazon Athena.</p>
+              <td class="pv2-ns ph3 ph1-ns">
+                  <p class="f7 fw6">Serverless Data Processing on AWS (advanced)</p>
+                  <p class="f7 fw4">This workshop demonstrates how to collect, store, and process data with a serverless application. In this workshop you'll learn how to automatically process files on Amazon S3 using AWS Lambda, how to build real-time streaming applications using Amazon Kinesis Streams and Amazon Kinesis Analytics, how to archive data streams using Amazon Kinesis Firehose and Amazon S3, and how to run ad-hoc queries on those files using Amazon Athena.</p>
 
               </td>
-              <td class="pv2 ph3">
-                  <p class="f5 fw6 v-mid">Developing Event-driven and Serverless Applications with IBM Cloud Functions & Apache OpenWhisk</p>
-                  <p class="f6 fw4">Learn the basics and strengths of IBM Cloud Functions & Apache OpenWhisk. In this workshop you will learn how to develop serverless applications composed of loosely coupled microservice-alike functions. You’ll learn about the key concepts and work with our CLI and UI to become a FaaS star by implementing a real-world application. You will also learn how to make use of related technologies such as our API Gateway, Message Hub and App Connect integration as well as other event providers. Finally, you will learn how to package and deploy your entire serverless application together using the the open Serverless Framework as well as IBM’s wskdeply.</p>
+              <td class="pv2-ns ph3 ph1-ns">
+                  <p class="f7 fw6">Developing Event-driven and Serverless Applications with IBM Cloud Functions & Apache OpenWhisk</p>
+                  <p class="f7 fw4">Learn the basics and strengths of IBM Cloud Functions & Apache OpenWhisk. In this workshop you will learn how to develop serverless applications composed of loosely coupled microservice-alike functions. You’ll learn about the key concepts and work with our CLI and UI to become a FaaS star by implementing a real-world application. You will also learn how to make use of related technologies such as our API Gateway, Message Hub and App Connect integration as well as other event providers. Finally, you will learn how to package and deploy your entire serverless application together using the the open Serverless Framework as well as IBM’s wskdeply.</p>
               </td>
           </tr>
 
@@ -81,8 +81,8 @@
 
       <h2 class="black f3 fw6 tc code mt5">Workshop Day Location</h2>
 
-      <div class="tc pb3">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1958.2525479698747!2d9.957978754404332!3d53.562544736218015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b18f691b79e6bb%3A0xcd378c10a85d5041!2sbetahaus+-+coworking+hamburg!5e0!3m2!1sen!2sde!4v1516448389357" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <div class="tc pb3 w-100">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1958.2525479698747!2d9.957978754404332!3d53.562544736218015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b18f791b79e6bb%3A0xcd378c10a85d5041!2sbetahaus+-+coworking+hamburg!5e0!3m2!1sen!2sde!4v1516448389357" height="450" frameborder="0" style="border:0" allowfullscreen class="w-100"></iframe>
       </div>
   </div>
 </div>
