publish information that azure workshop is for 'all' levels

--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -30,7 +30,7 @@
                   <p class="f7 fw4">This workshop shows you how to build a dynamic, serverless web application. You'll learn how to host static web resources with Amazon S3, how to use Amazon Cognito to manage users and authentication, and how to build a RESTful API for backend processing using Amazon API Gateway, AWS Lambda and Amazon DynamoDB.</p>
               </td>
               <td class="pv2-ns ph3 ph1-ns">
-                  <p class="f7 fw6">Designing, building, and operating FaaS-based microservices on Azure</p>
+                  <p class="f7 fw6">Designing, building, and operating FaaS-based microservices on Azure (all)</p>
                   <p class="f7 fw4">In this workshop we'll explore how to build and run a FaaS-based microservices architecture on Azure. Topics include:</p>
                   <ul class="f7 fw4">
                       <li>Using Domain Driven Design (DDD) to design a microservices architecture.</li>
