--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -72,7 +72,7 @@
 
               </td>
               <td class="pv2-ns ph3 ph1-ns">
-                  <p class="f7 fw6">Developing Event-driven and Serverless Applications with IBM Cloud Functions & Apache OpenWhisk</p>
+                  <p class="f7 fw6">Developing Event-driven and Serverless Applications with IBM Cloud Functions & Apache OpenWhisk (beginner - intermediate)</p>
                   <p class="f7 fw4">Learn the basics and strengths of IBM Cloud Functions & Apache OpenWhisk. In this workshop you will learn how to develop serverless applications composed of loosely coupled microservice-alike functions. You’ll learn about the key concepts and work with our CLI and UI to become a FaaS star by implementing a real-world application. You will also learn how to make use of related technologies such as our API Gateway, Message Hub and App Connect integration as well as other event providers. Finally, you will learn how to package and deploy your entire serverless application together using the the open Serverless Framework as well as IBM’s wskdeply.</p>
               </td>
           </tr>
