--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -276,7 +276,7 @@
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Serverless Wordpress</p>
-                  <p class="f6 fw4">I will showcase migrating a (semi-) high traffic WP site from a coslty server to AWS Lightsail & server-side rendering React app on Serverless framework. It's faster and more secure but at the same time the customer doesn’t have to compromise on their favourite editor, WordPress.</p>
+                  <p class="f6 fw4">I will showcase migrating a (semi-) high traffic WP site from a costly server to AWS Lightsail & server-side rendering React app on Serverless framework. It's faster and more secure but at the same time the customer doesn’t have to compromise on their favourite editor, WordPress.</p>
               </div>
           </div>
 
