Add chatbot w/s "pre-req".

--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -65,6 +65,7 @@
                       <li>How to test your chatbot</li>
                       <li>Basics of good chatbot design</li>
                   </ul>
+                  <p class="f7 fw4">Please note it will assist the workshop facilitators if you come prepared with your own AWS account but one will provided to those without.</p>
               </td>
               <td class="pv2-ns ph3 ph1-ns">
                   <p class="f7 fw6">Serverless Data Processing on AWS (advanced)</p>
