epsagon-logo-exchange

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="fl-ns w-30-ns center pa3">
                     <a id="akra" class="no-underline pointer db center" href="https://www.epsagon.com/" target="_blank" title="Epsagon">
-                        <img class="w-60-ns w-30" src="/imgs/epsagon-logo.png" alt="Epsagon" title="Epsagon" />
+                        <img class="w-60-ns w-30" src="/imgs/epsagon-hor.png" alt="Epsagon" title="Epsagon" />
                     </a>
                 </div>
             </div>
