--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -22,8 +22,8 @@
           <tr class="striped--light-gray v-top">
               <td class="f7 pv2-ns ph3 ph1-ns b"><p>09:00 - 13:00</p></td>
               <td class="pv2-ns ph3 ph1-ns">
-                  <p class="f7 fw6">Serverless Framework</p>
-                  <p class="f7 fw4">TBA</p>
+                  <p class="f7 fw6">Building Multi-Cloud Applications with the Serverless.com Event Gateway</p>
+                  <p class="f7 fw4">Serverless is all about empowering developers to be more productive, and part of that story is giving developers more choice. In this workshop you'll learn how to utilize the <a href="https://github.com/serverless/event-gateway" class="black" target="_blank">Event Gateway</a> to develop an application that utilize multiple cloud-providers.</p>
               </td>
               <td class="pv2-ns ph3 ph1-ns">
                   <p class="f7 fw6">Serverless Web Application on AWS (beginner)</p>
