finalize workshop agenda
by switching serverless.com and IBM

--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -8,7 +8,7 @@
           </p>
 
           <p>
-              Attendees who acquire a <a href="/tickets">workshop ticket</a> can attend to the following 4 hour workshops on a first-come first-serve basis (agenda still subject to change)
+              Attendees who acquire a <a href="/tickets">workshop ticket</a> can attend to the following 4 hour workshops on a first-come first-serve basis.
           </p>
       </div>
 
@@ -22,8 +22,8 @@
           <tr class="striped--light-gray v-top">
               <td class="f7 pv2-ns ph3 ph1-ns b"><p>09:00 - 13:00</p></td>
               <td class="pv2-ns ph3 ph1-ns">
-                  <p class="f7 fw6">Building Multi-Cloud Applications with the Serverless.com Event Gateway</p>
-                  <p class="f7 fw4">Serverless is all about empowering developers to be more productive, and part of that story is giving developers more choice. In this workshop you'll learn how to utilize the <a href="https://github.com/serverless/event-gateway" class="black" target="_blank">Event Gateway</a> to develop an application that utilize multiple cloud-providers.</p>
+                  <p class="f7 fw6">Developing Event-driven and Serverless Applications with IBM Cloud Functions & Apache OpenWhisk (beginner - intermediate)</p>
+                  <p class="f7 fw4">Learn the basics and strengths of IBM Cloud Functions & Apache OpenWhisk. In this workshop you will learn how to develop serverless applications composed of loosely coupled microservice-alike functions. You’ll learn about the key concepts and work with our CLI and UI to become a FaaS star by implementing a real-world application. You will also learn how to make use of related technologies such as our API Gateway, Message Hub and App Connect integration as well as other event providers. Finally, you will learn how to package and deploy your entire serverless application together using the the open Serverless Framework as well as IBM’s wskdeply.</p>
               </td>
               <td class="pv2-ns ph3 ph1-ns">
                   <p class="f7 fw6">Serverless Web Application on AWS (beginner)</p>
@@ -73,8 +73,8 @@
 
               </td>
               <td class="pv2-ns ph3 ph1-ns">
-                  <p class="f7 fw6">Developing Event-driven and Serverless Applications with IBM Cloud Functions & Apache OpenWhisk (beginner - intermediate)</p>
-                  <p class="f7 fw4">Learn the basics and strengths of IBM Cloud Functions & Apache OpenWhisk. In this workshop you will learn how to develop serverless applications composed of loosely coupled microservice-alike functions. You’ll learn about the key concepts and work with our CLI and UI to become a FaaS star by implementing a real-world application. You will also learn how to make use of related technologies such as our API Gateway, Message Hub and App Connect integration as well as other event providers. Finally, you will learn how to package and deploy your entire serverless application together using the the open Serverless Framework as well as IBM’s wskdeply.</p>
+                  <p class="f7 fw6">Building Multi-Cloud Applications with the Serverless.com Event Gateway</p>
+                  <p class="f7 fw4">Serverless is all about empowering developers to be more productive, and part of that story is giving developers more choice. In this workshop you'll learn how to utilize the <a href="https://github.com/serverless/event-gateway" class="black" target="_blank">Event Gateway</a> to develop an application that utilize multiple cloud-providers.</p>
               </td>
           </tr>
 
