Firebase is a sponsor.

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -44,6 +44,11 @@
                         <img class="w-100-ns w-50" src="/imgs/20170915-logo.png" alt="binaris" title="binaris" />
                     </a>
                 </div>
+                <div class="fl-ns w-50-ns center pa3">
+                    <a id="firebase" class="no-underline pointer db center" href="https://firebase.google.com/" target="_blank" title="firebase">
+                        <img class="w-100-ns w-50" src="/imgs/firebase-logo-standard.png" alt="firebase" title="firebase" />
+                    </a>
+                </div>
             </div>
         </div>
 
