--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -132,6 +132,12 @@
                 <img class="w-100-ns w-30" src="/imgs/25h.png" alt="25hours Hotel" title="25hours Hotel" />
             </a>
         </div>
+     
+        <div class="dib-ns w-10-ns pa3 v-top">
+            <a id="nycro" class="no-underline pointer db center" href="https//www.nycro.de" target="_blank" title="nycro">
+                <img class="w-100-ns w-30" src="/imgs/nycro_logo_2000x500 (1).png" alt="nycro" title="nycro" />
+            </a>
+        </div>
 
 
  <div class="w-50-ns center pa3">
