show Liberty IT as company sponsor

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -139,6 +139,11 @@
             </a>
         </div>
 
+        <div class="dib-ns w-10-ns pa3 v-top">
+            <a id="liberty-it" class="no-underline pointer db center" href="https://www.liberty-it.co.uk/" target="_blank" title="Liberty IT">
+                <img class="w-100-ns w-30" src="/imgs/liberty-it.png" alt="Liberty IT" title="Liberty IT" />
+            </a>
+        </div>
 
  <div class="w-50-ns center pa3">
         </div>
