sanitize company sponsor logo display
by v-centering them

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -113,33 +113,33 @@
 
         <h4 class="black f3 fw6 tc code mt2 mb1 mb0-ns cf">Company sponsors</h4>
 
-        <div class="dib-ns w-10-ns pa3 .v-top">
+        <div class="dib-ns w-10-ns pa3 v-mid">
 
             <a id="space-ape" class="no-underline pointer db center" href="http://www.spaceapegames.com/" target="_blank" title="Space Ape">
                 <img class="w-100-ns w-30" src="/imgs/space-ape.png" alt="Space Ape" title="Space Ape" />
             </a>
         </div>
 
-        <div class="dib-ns w-10-ns pa3 .v-top">
+        <div class="dib-ns w-10-ns pa3 v-mid">
 
             <a id="appmotion" class="no-underline pointer db center" href="http://www.appmotion.de/" target="_blank" title="Appmotion">
                 <img class="w-100-ns w-30" src="/imgs/appmotion_logo_dreizeilig.png" alt="Appmotion" title="Appmotion" />
             </a>
         </div>
 
-        <div class="dib-ns w-10-ns pa3 v-top">
+        <div class="dib-ns w-10-ns pa3 v-mid">
             <a id="25hours" class="no-underline pointer db center" href="https://www.25hours-hotels.com/hotels/hamburg/number-one" target="_blank" title="25hours">
                 <img class="w-100-ns w-30" src="/imgs/25h.png" alt="25hours Hotel" title="25hours Hotel" />
             </a>
         </div>
      
-        <div class="dib-ns w-10-ns pa3 v-top">
+        <div class="dib-ns w-10-ns pa3 v-mid">
             <a id="nycro" class="no-underline pointer db center" href="https//www.nycro.de" target="_blank" title="nycro">
                 <img class="w-100-ns w-30" src="/imgs/nycro_logo_2000x500 (1).png" alt="nycro" title="nycro" />
             </a>
         </div>
 
-        <div class="dib-ns w-10-ns pa3 v-top">
+        <div class="dib-ns w-10-ns pa3 v-mid">
             <a id="liberty-it" class="no-underline pointer db center" href="https://www.liberty-it.co.uk/" target="_blank" title="Liberty IT">
                 <img class="w-100-ns w-30" src="/imgs/liberty-it.png" alt="Liberty IT" title="Liberty IT" />
             </a>
