Add Arto's biog.

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -466,8 +466,32 @@
             </div>
         </div>
 
+        <div id="artol" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/liukkonen_arto_2.png" alt="Photo of Arto" title="Arto Liukkonen" class="grow"/>
+                </div>
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Arto Liukkonen
+                    </p>
+                    <p class="f6 gray mt0">
+                        Nordcloud
+                    </p>
+                    <p class="f6">
+                        Arto is a Lead Developer at Nordcloud. He's been a web developer for over ten years, kickstarting his career in 2007 by building successful Facebook games. Originally a PHP/WordPress guy, Arto converted to Javascript with Node.js v0.6 and for the last two years has been focused on React and serverless for both work and hobby projects, ranging from the banking sector to industrial IoT apps.
+                    </p>
+                    <p class="f6">
+                        Pronouns: he/him
+                    </p>
+                    <div class="tr">
+                        <a class="ph1 no-underline" title="Arto on Twitter" href="https://twitter.com/artoliukkonen" target="_blank">@@include('./icon-twitter.html')</a>
+                        <a class="ph1 no-underline" title="Arto on Linkedin" href="https://linkedin.com/artoliukkonen" target="_blank">@@include('./icon-linkedin.html')</a>
 
+                    </div>
 
-
+                </div>
+            </div>
+        </div>
     </div>
 </div>
