--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -272,7 +272,7 @@
                   17:20
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  <p>Arto Liukkonen</p>
+                  <a href="/speakers#artol" class="black">Arto Liukkonen</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Serverless Wordpress</p>
