Use new bio from Subbu.

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -359,7 +359,15 @@
                         Expedia Inc
                     </p>
                     <p class="f6">
-                        Subbu Allamaraju is a Vice President of technology at Expedia Inc. and has been involved in cloud, devOps, and operations for a number of years. He is currently leading Expedia's cloud migration from data centers to public cloud. Prior to joining Expedia, lead eBay's private cloud efforts making eBay one of the largest operators of OpenStack. He is an occasional speaker and blogger. You can follow him on Twitter @sallamar, and his blog at <a href="https://subbu.org">https://subbu.org</a>.
+Subbu Allamaraju is a technologist fascinated by large ambiguous problems and the learning opportunities such problems present. He is an influential voice both within Expedia, where he is currently a Vice President of Technology, and the industry.  Subbu is passionate about all things related to cloud, infrastructure, platforms, operations, the intersection of culture and technology, and the evolution of cloud native technologies and architectures.
+
+At Expedia, Subbu is leading a large-scale migration of Expedia’s travel platforms from enterprise data centers to a highly available architecture on the cloud.
+
+Before joining Expedia, as a Distinguished Engineer at eBay Inc., Subbu helped build private cloud infrastructure and platforms for eBay and PayPal, which positioned these two organizations amongst a select few of the largest operators of OpenStack.
+
+Subbu is an engineer well-rounded in product development, architecture, distributed systems, services, Internet protocols, operations, and cloud. Over the past several years, he helped build and empower several engineering and operations teams in these areas.
+
+Subbu is an occasional blogger and speaker at technology conferences, and has published books on REST and server-side programming in Java. You can follow his activities at <a href="https://subbu.org">https://subbu.org</a> and @sallamar on Twitter.
                     </p>
                     <p class="f6">
                         Pronouns: he/him
