Chad Arimura's LT is confirmed.

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -285,10 +285,11 @@
                   17:30
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  <p>Speaker TBC</p>
+                  <p>Chad Arimura</p>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">Lightning talk, topic TBC</p>
+                  <p class="f5 fw6 v-mid">Intro to Fn: Open Source Cloud Agnostic Serverless Platform</p>
+                  <p class="f6 fw4">In this lightning talk, I will demo the Fn Project, a new OSS serverless platform by the creators of IronFunctions, including Fn Flow which allows developers to build higher-order workflows in the native language of their choice (no JSON!). I will also highlight enterprise case studies of Fn in production.</p>
               </div>
           </div>
 
