Add Chad Arimura's details to speaker page.

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -285,7 +285,7 @@
                   17:30
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  <p>Chad Arimura</p>
+                  <a href="/speakers#chadari" class="black">Chad Arimura</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Intro to Fn: Open Source Cloud Agnostic Serverless Platform</p>
