--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -501,5 +501,37 @@ Subbu is an occasional blogger and speaker at technology conferences, and has pu
                 </div>
             </div>
         </div>
+
+        <div id="chadari" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Chad Arimura
+                    </p>
+                    <p class="f6 gray mt0">
+                        Oracle
+                    </p>
+                    <p class="f6">
+                        Chad is a 3x entrepreneur, most recently as co-founder and CEO of Iron.io where he helped grow a multi-million dollar ARR business helping to pioneer serverless computing. In 2017 Chad sold Iron.io and joined Oracle where he's Vice President of Serverless. Chad's currently leading the <a href="https://github.com/fnproject" target="_blank">Fn Project</a>, an open source cloud agnostic FaaS platform.
+                    </p>
+                    <p class="f6">
+                        Pronouns: he/him
+                    </p>
+
+                    <div class="tl">
+                        <a class="no-underline orange f6 fw1 ph1 v-top" href="http://http://chadarimura.com" target="_blank">chadarimura.com</a>
+                        <a class="ph1 no-underline" title="Chad on Twitter" href="https://twitter.com/chadarimura" target="_blank">@@include('./icon-twitter.html')</a>
+                        <a class="ph1 no-underline" title="Chad on LinkedIn" href="https://www.linkedin.com/in/chadarimura/" target="_blank">@@include('./icon-linkedin.html')</a>
+                        <a class="ph1 no-underline" title="Chad on Medium" href="https://medium.com/@carimura" target="_blank">@@include('./icon-medium.html')</a>
+
+                    </div>
+
+                </div>
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/chad_arimura_400x400.jpg" alt="Photo of Chad" title="Chad Arimura" class="grow"/>
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
