Fix borked url for Chad's webiste.

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -519,7 +519,7 @@ Subbu is an occasional blogger and speaker at technology conferences, and has pu
                     </p>
 
                     <div class="tl">
-                        <a class="no-underline orange f6 fw1 ph1 v-top" href="http://http://chadarimura.com" target="_blank">chadarimura.com</a>
+                        <a class="no-underline orange f6 fw1 ph1 v-top" href="http://chadarimura.com" target="_blank">chadarimura.com</a>
                         <a class="ph1 no-underline" title="Chad on Twitter" href="https://twitter.com/chadarimura" target="_blank">@@include('./icon-twitter.html')</a>
                         <a class="ph1 no-underline" title="Chad on LinkedIn" href="https://www.linkedin.com/in/chadarimura/" target="_blank">@@include('./icon-linkedin.html')</a>
                         <a class="ph1 no-underline" title="Chad on Medium" href="https://medium.com/@carimura" target="_blank">@@include('./icon-medium.html')</a>
