publicise missing workshop prerequisites

--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -24,10 +24,12 @@
               <td class="pv2-ns ph3 ph1-ns">
                   <p class="f7 fw6">Developing Event-driven and Serverless Applications with IBM Cloud Functions & Apache OpenWhisk (beginner - intermediate)</p>
                   <p class="f7 fw4">Learn the basics and strengths of IBM Cloud Functions & Apache OpenWhisk. In this workshop you will learn how to develop serverless applications composed of loosely coupled microservice-alike functions. You’ll learn about the key concepts and work with our CLI and UI to become a FaaS star by implementing a real-world application. You will also learn how to make use of related technologies such as our API Gateway, Message Hub and App Connect integration as well as other event providers. Finally, you will learn how to package and deploy your entire serverless application together using the the open Serverless Framework as well as IBM’s wskdeply.</p>
+                  <p class="b f7">Prerequisites: Laptop, Text editor</p>
               </td>
               <td class="pv2-ns ph3 ph1-ns">
                   <p class="f7 fw6">Serverless Web Application on AWS (beginner)</p>
                   <p class="f7 fw4">This workshop shows you how to build a dynamic, serverless web application. You'll learn how to host static web resources with Amazon S3, how to use Amazon Cognito to manage users and authentication, and how to build a RESTful API for backend processing using Amazon API Gateway, AWS Lambda and Amazon DynamoDB.</p>
+                  <p class="b f7">Prerequisites: A laptop (Mac/Linux/Windows) and a working AWS account.</p>
               </td>
               <td class="pv2-ns ph3 ph1-ns">
                   <p class="f7 fw6">Designing, building, and operating FaaS-based microservices on Azure (all)</p>
@@ -39,6 +41,7 @@
                       <li>Designing for resiliency, scalability, and performance.</li>
                       <li>Building a CI/CD pipeline.</li>
                   </ul>
+                  <p class="b f7">Prerequisites: Working Azure account recommended. Hands-on coding, so everyone should bring their laptop with a code editor (like, Visual Studio Code) and some experience writing JavaScript or C# for the API we are going to create! </p>
               </td>
           </tr>
           <tr class="striped--light-gray v-top">
@@ -65,16 +68,17 @@
                       <li>How to test your chatbot</li>
                       <li>Basics of good chatbot design</li>
                   </ul>
-                  <p class="f7 fw4">Please note it will assist the workshop facilitators if you come prepared with your own AWS account but one will provided to those without.</p>
+                  <p class="b f7">Prerequisites: A laptop (Mac/Linux/Windows) and a working AWS account.</p>
               </td>
               <td class="pv2-ns ph3 ph1-ns">
                   <p class="f7 fw6">Serverless Data Processing on AWS (advanced)</p>
                   <p class="f7 fw4">This workshop demonstrates how to collect, store, and process data with a serverless application. In this workshop you'll learn how to automatically process files on Amazon S3 using AWS Lambda, how to build real-time streaming applications using Amazon Kinesis Streams and Amazon Kinesis Analytics, how to archive data streams using Amazon Kinesis Firehose and Amazon S3, and how to run ad-hoc queries on those files using Amazon Athena.</p>
-
+                  <p class="b f7">Prerequisites: A laptop (Mac/Linux/Windows) and a working AWS account.</p>
               </td>
               <td class="pv2-ns ph3 ph1-ns">
                   <p class="f7 fw6">Building Multi-Cloud Applications with the Serverless.com Event Gateway</p>
                   <p class="f7 fw4">Serverless is all about empowering developers to be more productive, and part of that story is giving developers more choice. In this workshop you'll learn how to utilize the <a href="https://github.com/serverless/event-gateway" class="black" target="_blank">Event Gateway</a> to develop an application that utilize multiple cloud-providers.</p>
+                  <p class="b f7">Prerequisites: Laptop, AWS account (preferably with AdministratorAccess), Text editor,Serverless Framework v1 installed</p>
               </td>
           </tr>
 
