publish event gateway workshop level

--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -76,7 +76,7 @@
                   <p class="b f7">Prerequisites: A laptop (Mac/Linux/Windows) and a working AWS account.</p>
               </td>
               <td class="pv2-ns ph3 ph1-ns">
-                  <p class="f7 fw6">Building Multi-Cloud Applications with the Serverless.com Event Gateway</p>
+                  <p class="f7 fw6">Building Multi-Cloud Applications with the Serverless.com Event Gateway (intermediate)</p>
                   <p class="f7 fw4">Serverless is all about empowering developers to be more productive, and part of that story is giving developers more choice. In this workshop you'll learn how to utilize the <a href="https://github.com/serverless/event-gateway" class="black" target="_blank">Event Gateway</a> to develop an application that utilize multiple cloud-providers.</p>
                   <p class="b f7">Prerequisites: Laptop, AWS account (preferably with AdministratorAccess), Text editor,Serverless Framework v1 installed</p>
               </td>
