--- a/src/views/coc.html
+++ b/src/views/coc.html
@@ -10,14 +10,14 @@
             tl;dr: Jeff says be excellent with each other
             </p>
             <p class="fw6 mt5" >Need Help?</p>
-            <p>We have a dedicated team that takes care of your safety. If you experience harassment or other Code of Conduct violations, please contact the care team consisting of Fabian Fabian (#TODO) and Susanne Kaiser (@suksr).</p>
+            <p>We have a dedicated team that takes care of your safety. If you experience harassment or other Code of Conduct violations, please contact the care team consisting of Fabian Fabian (<a href="https://twitter.com/filtercake">@filtercake</a>) and Susanne Kaiser (<a href="https://twitter.com/suksr">@suksr</a>).</p>
 
             <p class="fw6 mt5" >How to get help</p>
             <ul>
-                <li>Talk to us in person at the conference venue or the evening events. Members of the organization can be recognized by the "JeffConf Staff" t-shirts they wear.</li>
-                <li>Write a Twitter direct message to: Fabian Fabian (#TODO) or Susanne Kaiser (@suksr) (DMs are open).</li>
-                <li>Write an email to the care team e-mail address jeffconf-coc-team@superluminar.io</li>
-                <li>Give us a phone call (+49 #TODO) or send an SMS</li>
+                <li>Talk to us in person at the conference venue or the evening events. Members of the organisation can be recognized by the "JeffConf Staff" t-shirts they wear.</li>
+                <li>Write a Twitter direct message to: Fabian Fabian (<a href="https://twitter.com/filtercake">@filtercake</a>) or Susanne Kaiser (<a href="https://twitter.com/suksr">@suksr</a>) (DMs are open).</li>
+                <li>Write an email to the care team e-mail address <a href="mailto:jeffconf-coc-team@superluminar.io">jeffconf-coc-team@superluminar.io</a></li>
+                <li>Give us a phone call <a href="tel:+4915110958585">+49 1511 0958585</a> or send an SMS</li>
             </ul>
 
             <p class="fw6 mt5" >
