- updated coc to latest version
- added Need Help? and How to get help section
- added original source, credit and license section

--- a/src/views/coc.html
+++ b/src/views/coc.html
@@ -2,46 +2,55 @@
     <div class="tc tl-ns">
         <h3 class="black f2 fw6 tc code" >Code of Conduct</h3>
         
-        <div class="black mw6 tc center">
+        <div class="black mw7 center">
             <p>
             All attendees, speakers, sponsors and volunteers at our conference are required to agree with the following code of conduct. Organisers will enforce this code throughout the event. We are expecting cooperation from all participants to help ensuring a safe environment for everybody.
             </p>
             <p >
             tl;dr: Jeff says be excellent with each other
             </p>
+            <p class="fw6 mt5" >Need Help?</p>
+            <p>We have a dedicated team that takes care of your safety. If you experience harassment or other Code of Conduct violations, please contact the care team consisting of Fabian Fabian (#TODO) and Susanne Kaiser (@suksr).</p>
+
+            <p class="fw6 mt5" >How to get help</p>
+            <ul>
+                <li>Talk to us in person at the conference venue or the evening events. Members of the organization can be recognized by the "JeffConf Staff" t-shirts they wear.</li>
+                <li>Write a Twitter direct message to: Fabian Fabian (#TODO) or Susanne Kaiser (@suksr) (DMs are open).</li>
+                <li>Write an email to the care team e-mail address jeffconf-coc-team@superluminar.io</li>
+                <li>Give us a phone call (+49 #TODO) or send an SMS</li>
+            </ul>
+
             <p class="fw6 mt5" >
             The Quick Version
             </p>
             <p>
-            Our conference is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, or religion (or lack thereof). We do not tolerate harassment of conference participants in any form.
-            Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organisers.
+            Our conference is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion (or lack thereof), or technology choices. We do not tolerate harassment of conference participants in any form. 
+            Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference <em>without a refund</em> at the discretion of the conference organisers.
             </p>
             <p class="fw6 mt5" >
             The Less Quick Version
             </p>
-            <p>
-            Harassment includes offensive verbal comments related to gender, age, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.
-            </p>
-            <p>
-            Participants asked to stop any harassing behavior are expected to comply immediately.
-            </p>
-            <p>
-            Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualised images, activities, or other material. Booth staff (including volunteers) should not use sexualised clothing/uniforms/costumes, or otherwise create a sexualised environment.
-            </p>
-            <p>
-            If a participant engages in harassing behavior, the conference organisers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.
-            </p>
-            <p>
-            If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified as they’ll be wearing branded t-shirts.
-            </p>
-            <p>
-            Conference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.
-            </p>
-            <p>
-            We expect participants to follow these rules at conference and workshop venues and conference-related social events.
-            </p>                    
-            
+            <p>Harassment includes offensive verbal comments related to gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, technology choices, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.</p>
+
+            <p>Participants asked to stop any harassing behavior are expected to comply immediately.</p>
+
+            <p>Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualised images, activities, or other material. Booth staff (including volunteers) should not use sexualized clothing/uniforms/costumes, or otherwise create a sexualized environment.</p>
+
+            <p>If a participant engages in harassing behavior, the conference organisers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.</p>
+
+            <p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified as they&#39;ll be wearing branded t-shirts.</p>
+
+            <p>Conference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.</p>
+
+            <p>We expect participants to follow these rules at conference and workshop venues and conference-related social events.</p>
+
+            <div class="footer">
+                <p><small><em>Original source and credit: <a href="http://2012.jsconf.us/#/about">http://2012.jsconf.us/#/about</a> &amp; <a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy">The Ada Initiative</a><br>
+                    Please help by translating or improving: <a href="https://github.com/leftlogic/confcodeofconduct.com">http://github.com/leftlogic/confcodeofconduct.com</a><br>
+                    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a></em></small>
+                </p>
+            </div>
         </div>
-        
+
     </div>
 </div>
