mention party location on agenda

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -333,9 +333,10 @@
                   20:00
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  <p>Party!</p>
+                  <p>Aftershow Party</p>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p>Party at <a href="https://www.bar-rossi.de/13-stock">13. Stock!</a></p>
               </div>
           </div>
 
