--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -96,12 +96,12 @@
                     </a>
                 </div>
                 <div class="fl-ns w-30-ns center pa3">
-                    <a id="akra" class="no-underline pointer db center" href="https://ibm.com/" target="_blank" title="IBM">
+                    <a id="ibm" class="no-underline pointer db center" href="https://ibm.com/" target="_blank" title="IBM">
                         <img class="w-60-ns w-30" src="/imgs/ibm-702x336.png" alt="IBM" title="IBM" />
                     </a>
                 </div>
                 <div class="fl-ns w-30-ns center pa3">
-                    <a id="akra" class="no-underline pointer db center" href="https://www.epsagon.com/" target="_blank" title="Epsagon">
+                    <a id="epsagon" class="no-underline pointer db center" href="https://www.epsagon.com/" target="_blank" title="Epsagon">
                         <img class="w-60-ns w-30" src="/imgs/epsagon-hor.png" alt="Epsagon" title="Epsagon" />
                     </a>
                 </div>
